test/org/midica/testfiles/failing/eff-func-mono-mode-set-signed.midica
INCLUDE inc/instruments.midica


0: mono_mode.set(+5)
